--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "applications/plugins/dap_link/lib/free-dap"]
 	path = applications/plugins/dap_link/lib/free-dap
 	url = https://github.com/ataradov/free-dap.git
+[submodule "applications/plugins/nrf24scan"]
+	path = applications/plugins/nrf24scan
+	url = https://github.com/vad7/nrf24scan.git
