--- a/lib/subghz/SConscript
+++ b/lib/subghz/SConscript
@@ -6,6 +6,7 @@ env.Append(
     ],
     SDK_HEADERS=[
         File("environment.h"),
+        File("#/lib/subghz/protocols/protocol_items.h"),
         File("receiver.h"),
         File("registry.h"),
         File("subghz_worker.h"),
