--- a/.github/workflows/compile on push.yml
+++ b/.github/workflows/compile on push.yml
@@ -12,10 +12,14 @@ jobs:
       # Install common reqired packages: gcc, avr-libc, avrdude, python3, python3-pip
       run: sudo apt-get install -y gcc-avr binutils-avr avr-libc avrdude python3 python3-pip zip
     - name: Compile Prod (DEBUG=0, COMPACT=1)
-      run: ./fbt COMPACT=1 DEBUG=0 updater_package
+      run: ./fbt COMPACT=1 DEBUG=0 updater_package > log.txt
     - name: Upload prod artifact (TAR)
       uses: actions/upload-artifact@v2
       with:
         name: flipper-z-f7-update-Korai.tgz
         path: dist/f7-C/flipper-z-f7-update-Korai.tgz
-
+    - name: Upload log 
+      uses: actions/upload-artifact@v2
+      with:
+        name: log.txt
+        path: log.txt
