--- a/firmware/SConscript
+++ b/firmware/SConscript
@@ -6,6 +6,7 @@ env.Append(
         *env.GlobRecursive("*.h", "targets/furi_hal_include", "*_i.h"),
         *env.GlobRecursive("*.h", "targets/f${TARGET_HW}/furi_hal", "*_i.h"),
         File("targets/f7/platform_specific/intrinsic_export.h"),
+        File("#/firmware/targets/furi_hal_include/furi_hal_subghz.h"),
     ],
 )
 
